--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
  *  - Set PROXY_ENDPOINT to your deployed proxy (Cloudflare Worker URL).
  *  - The proxy must return the HTML of https://ctdems.org/dtcs/ with CORS headers.
  */
-const PROXY_ENDPOINT = "https://YOUR-WORKER.example.workers.dev/?url="; // <-- change this
+const PROXY_ENDPOINT = "https://dtc-proxy.brewedcoffeebean.workers.dev/?url=";
 
 const SOURCE_URL = "https://ctdems.org/dtcs/";
 
